# adjust.h

./: .clangd  .gitignore  README.md  adjust.h
examples/: README.md  global.c  global_char.c  global_float.c  global_string.c  timed.c  type_bool.c  type_char.c  type_string.c  types.c
examples/bouncing_ball/: main.c
examples/global/: Makefile  README.md  global_bool.c  global_float.c
examples/global_variables/: global_bool.c  global_char.c  global_float.c  global_int.c  global_string.c
examples/local_variables/: Makefile  type_bool.c  type_char.c  type_float.c  type_int.c  type_string.c
examples/main_variables/: Makefile  README.md  adjust.h  tint  type_bool.c  type_char.c  type_float.c  type_int  type_int.c  type_string  type_string.c
examples/raylib-example/: CMakeLists.txt  README.md  main.c
examples/sdl3_example/: Makefile  bouncing.c
examples/short_variables/: Makefile  README.md  type_bool.c  type_char.c  type_float.c  type_int.c  type_string.c
examples/timer/: README.md  main.c
